<resources>
    <string name="app_name">LMHotels</string>
    <string name="app_descr">Last Minute Hotels example app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">your.email@example.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_send_to">Send To</string>

    <string name="title_fragment_home">Hotels</string>
    <string name="title_fragment_about">About</string>

    <string name="title_menu_home">Home</string>
    <string name="title_menu_about">About</string>
    <string name="title_menu_sortby">Sort By</string>

    <string name="title_context_sort_stars_asc">By Stars Ascending</string>
    <string name="title_context_sort_stars_desc">By Stars Descending</string>

    <string name="text_empty_hotels">No Hotels Found!</string>

    <string name="text_details_rating">User Rating</string>
    <string name="text_details_checkin">Check-In</string>
    <string name="text_details_checkout">Check-Out</string>
    <string name="text_details_checkhours_template"><![CDATA[<b>From:</b> %1$s<br/><b>To:</b> %2$s]]></string>
    <string name="text_details_phone">Phone Number</string>
    <string name="text_details_email">E-Mail</string>

    <string name="error_details_maps">Google Maps not installed!</string>

    <string name="share_hotel_template">Check this hotel out: %1$s (%2$s \u2605) - %3$s (%4$s)</string>
</resources>
